--- a/TH/myCircle.html
+++ b/TH/myCircle.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    // Class: Hình tròn.
+    //     -Thuộc tính:
+    //         +Bán kính (Radius) Nhận vào giá trị dạng số thực.
+    //         +Màu sắc (color) Nhận giá trị dạng chuỗi.
+    //     -Phương thức:
+    //         +Circle() là phương thức khởi tạo để tạo đối tượng không tham số.
+    //         +getRadius() là phương thức trả về bán kính hình tròn.
+    //         +getArea() là phương thức trả về S hình tròn S= Math.PI * radius * radius.
+    let Circle = function(radius) {
+        this.radius = radius;
+        this.getRadius = function () {
+            return radius;
+        }
+        this.getArea = function () {
+            return Math.PI * radius * radius;
+        }
+    }
+    let circle = new Circle(2);
+    let radius = circle.getRadius();
+    let area = circle.getArea();
+    alert("radius: " + radius + "; area: " + area);
+</script>
 </body>
 </html>
